--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:analyze": "ANALYZE=true npm run build",
+    "analyze": "npm run build:analyze",
+    "lighthouse": "lhci autorun",
+    "perf-audit": "npm run build && npm run lighthouse",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^15.4.6",
     "@splinetool/react-spline": "^4.0.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
@@ -16,10 +22,13 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
-    "tailwind-merge": "^3.3.1"
+    "sharp": "^0.34.3",
+    "tailwind-merge": "^3.3.1",
+    "web-vitals": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@lhci/cli": "^0.15.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
