--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_CONSOLE_URL=https://console.aquanode.io
-NEXT_PUBLIC_API_URL=http://localhost:3080/api/v1
+NEXT_PUBLIC_API_URL=http://localhost:3080/
