--- a/package.json
+++ b/package.json
@@ -14,19 +14,26 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
     "@next/bundle-analyzer": "^15.4.6",
+    "@next/mdx": "^15.5.3",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@splinetool/react-spline": "^4.0.0",
     "@tanstack/react-query": "^5.85.5",
+    "@types/mdx": "^2.0.13",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
+    "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
+    "remark-gfm": "^4.0.1",
     "sharp": "^0.34.3",
     "tailwind-merge": "^3.3.1",
     "web-vitals": "^5.1.0"
