--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@splinetool/react-spline": "^4.0.0",
     "@tanstack/react-query": "^5.85.5",
     "@types/mdx": "^2.0.13",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
