--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "geist": "^1.5.1",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.525.0",
