--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "build:analyze": "ANALYZE=true npm run build",
     "analyze": "npm run build:analyze",
     "lighthouse": "lhci autorun",
@@ -14,10 +14,8 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@mdx-js/loader": "^3.1.1",
-    "@mdx-js/react": "^3.1.1",
-    "@next/bundle-analyzer": "^15.4.6",
-    "@next/mdx": "^15.5.3",
+    "@next/bundle-analyzer": "16.0.1",
+    "@next/mdx": "16.0.1",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.85.5",
@@ -30,26 +28,29 @@
     "geist": "^1.5.1",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.525.0",
-    "next": "15.3.4",
+    "next": "16.0.1",
     "next-mdx-remote": "^5.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "remark-gfm": "^4.0.1",
     "sharp": "^0.34.3",
     "tailwind-merge": "^3.3.1",
     "web-vitals": "^5.1.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@lhci/cli": "^0.15.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
     "eslint": "^9",
-    "eslint-config-next": "15.3.4",
+    "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2"
   }
 }
