--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.11.0",
+    "babel-plugin-react-compiler": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
@@ -30,6 +31,7 @@
     "lucide-react": "^0.525.0",
     "next": "16.0.1",
     "next-mdx-remote": "^5.0.0",
+    "next-seo": "^7.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "remark-gfm": "^4.0.1",
